# gridsense

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  TESTING.md  docker-compose.yml  fly.toml  make.bat  pyproject.toml
.github/workflows/: ci.yml  release.yml
dashboard/: app.py  requirements.txt
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.pipeline
pipelines/: __init__.py  forecast_flow.py  ingest_flow.py  retrain_flow.py
scripts/: smoke_test.py  train_models.py
src/gridsense/: __init__.py
src/gridsense/api/: __init__.py  main.py  schemas.py
src/gridsense/api/routers/: __init__.py  battery.py  events.py  forecast.py
src/gridsense/battery/: __init__.py  soc.py
src/gridsense/db/: __init__.py  connection.py  models.py
src/gridsense/forecast/: monitor.py  solar.py  trainer.py
src/gridsense/ingest/: modbus.py  weather.py
src/gridsense/pq/: __init__.py  classifier.py  events.py  features.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_classifier.py  test_features.py  test_forecast.py  test_modbus.py  test_soc.py  test_weather.py
