[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridsense"
version = "0.1.0"
description = "End-to-end platform for solar generation forecasting and power quality monitoring"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["solar", "power-quality", "forecasting", "timeseries", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pywavelets>=1.4",
    "pymodbus>=3.5",
    "requests>=2.31",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "prefect>=3.0",
    "evidently>=0.4",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.1",
    "mypy>=1.6",
]
dashboard = [
    "streamlit>=1.28",
    "plotly>=5.18",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gridsense"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["gridsense"]
# Modules only exercised by integration tests — excluded from unit-only runs
omit = [
    "src/gridsense/api/*",
    "src/gridsense/db/*",
    "src/gridsense/forecast/monitor.py",
    "src/gridsense/pq/events.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false   # third-party stubs vary by platform
# Suppress errors from SQLAlchemy ORM patterns, FastAPI decorators,
# numpy generics, and other untyped third-party libraries.
disable_error_code = [
    "misc",             # DeclarativeBase / BaseModel subclassing
    "untyped-decorator",# FastAPI router decorators
    "no-untyped-call",  # calls into untyped pymodbus / SQLAlchemy internals
    "assignment",       # SQLAlchemy Column() ORM attribute assignments
    "arg-type",         # SQLAlchemy where() / order_by() expression args
    "import-untyped",   # requests, evidently, scipy without stubs
    "no-any-return",    # numpy waveform generators returning Any
]
